--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   "license": "MIT",
   "dependencies": {
     "@ethereum-attestation-service/eas-contracts": "^1.3.7",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.9.3",
     "@openzeppelin/contracts-upgradeable": "^4.9.3",
+    "dotenv": "^16.4.5",
+    "ethers": "^5.5.2",
+    "hardhat": "^2.22.6",
     "solmate": "^6.2.0"
   },
   "devDependencies": {
